[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/tool_settings_panel/property_panels/brush_tip_panel.gd" type="Script" id=1]

[node name="Control" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -589.0
margin_bottom = -514.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 6.0
margin_right = 25.0
margin_bottom = 20.0
text = "text"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 29.0
margin_right = 293.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Square"
items = [ "Square", null, false, 0, null, "Round", null, false, 1, null ]
selected = 0

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 297.0
margin_right = 371.0
margin_bottom = 26.0
min_value = 1.0
value = 1.0

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
